# OT_Analysis

./: CHANGELOG.txt  CONTRIBUTING.md  README.md  conf.py  environment.yml  index_ot_analysis.rst  main.py  make.bat  pyproject.toml  readme_link.rst  readthedocs.yml  setup.cfg  user_documentation.md
.github/workflows/: ci_pipeline.yml  draft-pdf.yml
JOSS/: paper.bib  paper.md  paper.tex
_build/doctrees/: README.doctree  conf.doctree  environment.pickle  index.doctree  index_ot_analysis.doctree  main.doctree  modules.doctree  ot_analysis.controller.doctree  ot_analysis.doctree  ot_analysis.extractor.doctree  ot_analysis.model.doctree  ot_analysis.view.doctree  readme_link.doctree  user_doc.doctree  user_documentation.doctree
_build/html/: .buildinfo  README.html  conf.html  genindex.html  index.html  index_ot_analysis.html  main.html  modules.html  objects.inv  ot_analysis.controller.html  ot_analysis.extractor.html  ot_analysis.html  ot_analysis.model.html  ot_analysis.view.html  py-modindex.html  readme_link.html  search.html  searchindex.js  user_doc.html  user_documentation.html
docs/: conf.py  modules.rst  otanalysis.extractor.rst  otanalysis.model.rst  otanalysis.rst  requirements.txt
ot_analysis/: __init__.py  __main__.py  setup_logger.py
ot_analysis/controller/: controller.py
ot_analysis/model/: curve.py  optical_effect.py
set_demo/: b3c3-2021.06.07-14.58.15.777.jpk-nt-force  b3c3-2021.06.07-14.58.55.908.jpk-nt-force  b4c6d-2019.05.07-15.03.10.834.jpk-nt-force  b4c6d-2019.05.07-15.03.40.822.jpk-nt-force  methods_22-06-2022_08-59-56_.tsv  output_22-06-2022_08-59-56.csv  output_22-06-2022_09-00-05.csv  output_22-06-2022_09-00-26.csv
tests/: test_controller.py  test_curve.py  test_optical_effect.py
user_documentation/: user_documentation.md
(+84 files in other folders)
