[metadata]
name = OTAnalysis
version = 0.2.86
author = Thierry GALLIANO (LAI)
author_email = thierry.galliano@etu.univ-amu.fr

license = GPL-3.0-only
description = Tools for extracting, analyzing and classifying optical tweezer data curves
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TigiGln/OTAnalysis.git
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy>=1.21
    pandas
    scipy
    matplotlib
    PyQt5
    supyr-struct
    pathlib
python_requires = >= 3.7


[options.extras_require]
dev =
    pytest
    pytest-cov
    sphinx
    sphinx-rtd-theme
    m2r2

[options.entry_points]
console_scripts =
    otanalysis = otanalysis.__main__:main

